--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -9,3 +9,8 @@
 ::-webkit-scrollbar-thumb:hover {
     background: rgba(0,0,0,.3);
 }
+.top-100 {top: 100%}
+.bottom-100 {bottom: 100%}
+.max-h-select {
+    max-height: 300px;
+}
